opam-version: "1.2"
name: "osbx"
version: "1.0.0"
maintainer: "Darren Ldl <dldldev@yahoo.com>"
authors: "Darren Ldl <dldldev@yahoo.com>"
homepage: "https://github.com/darrenldl/ocaml-SeqBox"
bug-reports: "https://github.com/darrenldl/ocaml-SeqBox/issues"
license: "BSD-3-Clause"
dev-repo: "https://github.com/darrenldl/ocaml-SeqBox.git"
build: [
  ["./configure" "--prefix=%{prefix}%"]
  [make]
]
install: [make "install"]
remove: ["ocamlfind" "remove" "osbx"]
depends: [
  "ocamlfind"       {build}
  "jbuilder"        {build}
  "stdint"          {build}
  "nocrypto"        {build}
  "angstrom"        {build}
  "core"            {build}
  "hex"             {build}
  "ctypes"          {build}
  "cryptes-foreign" {build}
  "cmdliner"        {build}
]
